# jk-build

./: .clang-format  .gitignore  .gitmodules  .vim-template:.cc  .vim-template:.hh  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  cmake.yml  debug.yml  release.yml
ci/: Dockerfile  Jenkinsfile  jk.yaml
doc/: jk.md
include/jk/: arguments.hh  version.h
include/jk/cli/: cli.hh  echo_color.hh  jk.hh
include/jk/common/: counter.hh  flags.hh  path.hh
include/jk/core/: error.h
include/jk/core/builder/: builder.hh  custom_command.hh  makefile_builder.hh
include/jk/core/compile/: compile.hh  ir.hh
include/jk/core/filesystem/: expander.hh  project.hh
include/jk/core/output/: makefile.hh
include/jk/core/rules/: build_rule.hh  dependent.hh  package.hh
include/jk/core/script/: script.hh
include/jk/core/writer/: buffer_writer.hh  file_writer.hh  json_merge_writer.hh  writer.hh
include/jk/lang/cc/: cc_binary.hh  cc_library.hh  cc_test.hh  compile.hh  source_file.hh
include/jk/lang/cc/compiler/: cc_binary.hh  cc_library.hh  cc_test.hh
include/jk/lang/cc/rules/: cc_binary.hh  cc_library.hh  cc_library_helper.hh  cc_test.hh
include/jk/utils/: array.hh  kwargs.hh  logging.hh  stack.hh  str.hh  variable.hh
source/: main.cc
source/jk/: version.h
source/jk/cli/: _parse.cc  _parse.hh  cli.cc  cli.hh  download.cc  download.hh  echo_color.cc  echo_color.hh  gen.cc  gen.hh  jk.cc  jk.hh  link_script.cc  link_script.hh  progress.cc  progress.hh  rm.cc  rm.hh  variable.cc  variable.hh
source/jk/common/: counter.hh  flags.cc  flags.hh  lazy_property.hh  path.cc  path.hh  type_converter.hh
source/jk/core/: constant.hh  error.h
source/jk/core/algorithms/: tarjan.hh  topological_sort.hh
source/jk/core/builder/: custom_command.cc  custom_command.hh
source/jk/core/cache/: cache.cc  cache.hh  cache_writer.hh  persistent_cache.cc  persistent_cache.hh
source/jk/core/compile/: compile.cc  compile.hh  makefile_global_compiler.cc  makefile_global_compiler.hh  pre_processer.hh
source/jk/core/executor/: script.cc  script.hh  worker_pool.cc  worker_pool.hh
source/jk/core/filesystem/: configuration.cc  configuration.hh  expander.cc  expander.hh  file_system.hh  project.cc  project.hh
source/jk/core/generators/: compiledb.hh  makefile.cc  makefile.hh
source/jk/core/gnu/: mm_parser.cc  mm_parser.hh  py_parser.cc  py_parser.hh
source/jk/core/interfaces/: compiler.hh  expander.hh  writer.hh
source/jk/core/models/: build_package.cc  build_package.hh  build_package_factory.hh  build_rule.cc  build_rule.hh  build_rule_base.cc  build_rule_base.hh  build_rule_factory.hh  dependent.cc  dependent.hh  helpers.hh  rule_type.hh  session.hh
source/jk/core/output/: makefile.cc  makefile.hh
source/jk/core/parser/: combinator.hh  input_stream.hh  parser.hh  parserCombinator.cpp  parser_context.hh  parser_fragment.cc  parser_fragment.hh  parser_result.hh  parsers.hh  position.hh  term_parser.cc  term_parser.hh  type_system.hh
source/jk/core/parser/combinator/: convertor.hh  many.hh  or.hh  plus.hh
source/jk/core/rules/: build_rule.cc  build_rule.hh  dependent.cc  dependent.hh  package.cc  package.hh
source/jk/core/script/: script.cc  script.hh
source/jk/core/writer/: buffer_writer.cc  buffer_writer.hh  file_writer.cc  file_writer.hh  json_merge_writer.cc  json_merge_writer.hh  writer.hh
source/jk/impls/: actions.hh
source/jk/impls/actions/: generate_all.hh
source/jk/impls/cc/rules/: cc_library.cc  cc_library.hh
source/jk/impls/compilers/: compiler_factory.hh  nop_compiler.cc  nop_compiler.hh
source/jk/impls/compilers/compiledb/: cc_library_compiler.cc  cc_library_compiler.hh
source/jk/impls/compilers/makefile/: cc_binary_compiler.cc  cc_binary_compiler.hh  cc_library_compiler.cc  cc_library_compiler.hh  cc_test_compiler.cc  cc_test_compiler.hh  common.cc  common.hh  proto_library_compiler.cc  proto_library_compiler.hh  root_compiler.cc  root_compiler.hh  shell_script_compiler.cc  shell_script_compiler.hh
source/jk/impls/models/cc/: source_file.cc  source_file.hh
source/jk/impls/rules/: cc_binary.cc  cc_binary.hh  cc_library.cc  cc_library.hh  cc_test.cc  cc_test.hh  proto_library.cc  proto_library.hh  shell_script.cc  shell_script.hh
source/jk/impls/writers/: buffer_writer.cc  buffer_writer.hh  file_writer.cc  file_writer.hh
source/jk/rules/: common.hh
source/jk/rules/cc/: cache.cc  cache.hh  include_argument.cc  include_argument.hh  include_lines.cc  include_lines.hh  recorder.cc  recorder.hh  source_file.cc  source_file.hh
source/jk/rules/cc/compiler/: cc_binary.cc  cc_binary.hh  cc_library.cc  cc_library.hh  cc_test.cc  cc_test.hh  proto_library.cc  proto_library.hh
source/jk/rules/cc/rules/: cc_binary.cc  cc_binary.hh  cc_library.cc  cc_library.hh  cc_library_helper.cc  cc_library_helper.hh  cc_test.hh  proto_library.cc  proto_library.hh
source/jk/rules/cc/tools/: include_finder.cc  include_finder.hh
source/jk/utils/: array.hh  assert.hh  bytes.hh  cpp_features.hh  kwargs.cc  kwargs.hh  lazy_eval.hh  logging.cc  logging.hh  progress.hh  stack.cc  stack.hh  str.cc  str.hh  type_traits.hh
source/jk/utils/functools/: memo.hh
source/test/: main.cc
source/test/jk/core/compile/: nop_expander.cc  (+3 more)
source/test/jk/utils/: stack.cc  str.cc
src/: main.cc
src/jk/cli/: cli.cc  echo_color.cc  gen.cc  jk.cc  progress.cc
src/jk/common/: flags.cc  path.cc
src/jk/core/builder/: custom_command.cc  makefile_builder.cc
src/jk/core/cache/: cache.cc
src/jk/core/compile/: compile.cc  ir.cc
src/jk/core/filesystem/: expander.cc  project.cc
src/jk/core/output/: makefile.cc
src/jk/core/rules/: build_rule.cc  dependent.cc  package.cc
src/jk/core/script/: script.cc
src/jk/core/writer/: buffer_writer.cc  file_writer.cc
src/jk/lang/cc/: cc_library.cc  compile.cc  source_file.cc
src/jk/utils/: kwargs.cc  logging.cc  stack.cc
test/: main.cc
test/jk/core/compile/: compile.cc  fake_buffer_writer.cc  nop_expander.cc  nop_expander.hh
test/jk/core/rules/: dependent.cc
test/jk/core/script/: script.cc
(+20 files in other folders)
